--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CIEIA - Centro Institucional escolar inclusivo de Americana</title>
+  <title>CIEIA - Centro Institucional Escolar Inclusivo de Americana</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -33,9 +33,9 @@
   <section id="hero">
     <div class="hero-container">
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt="" style="width: 300px"></a>
-      <h2 data-aos="fade-up" style="color: #000; font-size: 20px;">Incluir os alunos em um ambiente inclusivo e transformar sua vida!<br></h2>
-        <span data-aos="fade-up">Escute nosso objetivo: <audio controls src="assets/audio/objetivo.mp3" style="height: 15px; width: 100px;"></audio> </span><br>
-      <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto" style="background-color: #8adaf4; color: #fff">Sobre nós</a>
+      <h2 data-aos="fade-up" style="color: #052256; font-size: 20px;">Incluir os alunos em um ambiente inclusivo e transformar sua vida!<br></h2>
+        <span data-aos="fade-up" style="color: #052256;">Escute nosso objetivo: <audio controls src="assets/audio/objetivo.mp3" style="height: 15px; width: 100px;"></audio> </span><br>
+      <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto" style="background-color: #8adaf4; color: #fff; font-weight: bold;">Sobre nós</a>
     </div>
   </section><!-- End Hero -->
 
@@ -44,7 +44,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <a href="index.html" style="color: #8adaf4"><img src="assets/img/logo.png" alt=""></a>
+        <a href="index.html" style="color: #aef3fd"><img src="assets/img/logo.png" alt=""></a>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -402,19 +402,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street,<br>New York, NY 535022</p>
+                <p>Rua Vital Brasil, 511,<br>Americana, SP</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>contato@brooklyn.com</p>
+                <p>contato@cieia.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Telefone:</h4>
-                <p>+55 19 99411-5111</p>
+                <p>+55 19 99999-9999</p>
               </div>
 
             </div>
@@ -443,7 +443,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Sua mensagem foi enviada!</div>
               </div>
-              <div class="text-center"><button type="submit">Enviar mensagem para Brooklyn!</button></div>
+              <div class="text-center"><button type="submit">Enviar mensagem para CIEIA!</button></div>
             </form>
 
           </div>
@@ -465,7 +465,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h3><img src="assets/img/logo.png" style="max-height: 170px;" alt=""></h3>
-            <p>instituição educacional infantil</p>
+            <p>Centro Institucional Escolar Inclusivo de Americana</p>
           </div>
         </div>
 
@@ -480,13 +480,9 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Brooklyn</span></strong>. Todos direitos reservados
+        &copy; Copyright <strong><span>CIEIA</span></strong>. Todos direitos reservados
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/knight-free-bootstrap-theme/ -->
         Desenvolvido por<a href="https://instagram.com/lucaoxz"> Lucao</a>
       </div>
     </div>
