--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <section id="hero">
     <div class="hero-container">
       <a href="index.html" class="hero-logo" data-aos="zoom-in"><img src="assets/img/hero-logo.png" alt="" style="width: 300px"></a>
-      <h2 data-aos="fade-up" style="color: #052256; font-size: 20px;">Incluir os alunos em um ambiente inclusivo e transformar sua vida!<br></h2>
-        <span data-aos="fade-up" style="color: #052256;">Escute nosso objetivo: <audio controls src="assets/audio/objetivo.mp3" style="height: 15px; width: 100px;"></audio> </span><br>
+      <h2 data-aos="fade-up" style="color: #fff; font-size: 20px;">Incluir os alunos em um ambiente inclusivo e transformar sua vida!<br></h2>
+        <span data-aos="fade-up" style="color: #fff;">Escute nosso objetivo: <audio controls src="assets/audio/objetivo.mp3" style="height: 15px; width: 100px;"></audio> </span><br>
       <a data-aos="fade-up" data-aos-delay="200" href="#about" class="btn-get-started scrollto" style="background-color: #8adaf4; color: #fff; font-weight: bold;">Sobre nós</a>
     </div>
   </section><!-- End Hero -->
