mudanças, falta painel adm

--- a/index.html
+++ b/index.html
@@ -81,19 +81,12 @@
           </div>
           <div class="col-lg-6" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3 ">
-              <h3>Centro Institucional escolar inclusivo de Americana</h3>
+              <h3>Centro Institucional Escolar Inclusivo de Americana</h3>
               <p class="fst-italic">
-                Somos uma escola ...
+                Somos a CIEIA! Uma escola especializada no ensino para educandos com deficiência, transtornos globais do desenvolvimento e altas habilidades ou superdotação. 
               </p>
-              <ul>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-              </ul>
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum
+              <p class="fst-italic">
+                As atividades pedagógicas/educacionais são planejadas e realizadas coletivamente, com ação e responsabilidade dos envolvidos: famílias, educadores e estudantes. Nós oferecemos um serviço de educação capaz de garantir um ambiente menos restritivo para quem tem deficiência. 
               </p>
             </div>
           </div>
@@ -114,24 +107,20 @@
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="icon-box mt-5 mt-lg-0" data-aos="fade-up">
-              <i class="bx bx-receipt"></i>
-              <h4>Est labore ad</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
-            </div>
-            <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-cube-alt"></i>
-              <h4>Harum esse qui</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <i class="bx bx-shield" style="color: #052256"></i>
+              <h4>Inclusão</h4>
+              <p>Incluímos os alunos em um ambiente menos restritivo para que
+                 se desenvolvam ao decorrer da vida. </p>
             </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="200">
-              <i class="bx bx-images"></i>
-              <h4>Aut occaecati</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <i class="bx bx-bookmark" style="color: #052256"></i>
+              <h4>Aulas Dinamicas</h4>
+              <p>Contamos com aulas dinâmicas e adaptativas para cada tipo de deficiência.</p>
             </div>
             <div class="icon-box mt-5" data-aos="fade-up" data-aos-delay="300">
-              <i class="bx bx-shield"></i>
-              <h4>Beatae veritatis</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <i class="bx bx-cube" style="color: #052256"></i>
+              <h4>Brinquedos especiais</h4>
+              <p>Parquinho com brinquedos especiais para crianças com deficiência visual, auditiva e física. </p>
             </div>
           </div>
           <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/services.jpg");' data-aos="fade-left" data-aos-delay="100"></div>
@@ -154,10 +143,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/image1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Frente</h4>
-                <p>Frente de nossa escola</p>
+                <h4>Inclusão</h4>
+                <p>Aulas dinamicas e Inclusão</p>
               </div>
             </div>
           </div>
@@ -166,18 +155,18 @@
             <div class="portfolio-wrap">
               <img src="assets/img/services.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Entretenimento</h4>
-                <p>Sala do Entretenimento</p>
+                <h4>Brinquedos especiais</h4>
+                <p>Brinquedos especiais para as crianças</p>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/port-3.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/image3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Jardim</h4>
-                <p>Nosso jardim para as crianças</p>
+                <p>Nosso jardim com brinquedos para as crianças</p>
               </div>
             </div>
           </div>
@@ -237,16 +226,10 @@
             <div class="member" data-aos="zoom-in">
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
               </div>
               <div class="member-info">
                 <h4>Thomas Shelby</h4>
-                <span>Diretor Administrativo</span>
+                <span style="color: #052256">Diretor Administrativo</span>
                 <p>Thomas Shelby é responsavel por toda nossa parte de administração de nossa escola, todos assuntos contabéis é com ele!</p>
               </div>
             </div>
@@ -256,16 +239,10 @@
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
               </div>
               <div class="member-info">
                 <h4>Laura Ipisom</h4>
-                <span>Educadora Especial</span>
+                <span style="color: #052256">Educadora Especial</span>
                 <p>Laura Ipisom especializada em educação especial, possue todos os conhecimentos de Libras, Braile e outras deficiencias especiais.</p>
               </div>
             </div>
@@ -275,16 +252,10 @@
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
               </div>
               <div class="member-info">
                 <h4>Walter White</h4>
-                <span>Educador Especial de Tecnologia</span>
+                <span style="color: #052256">Educador Especial de Tecnologia</span>
                 <p>Walter White especializado em educação especial e em tecnologia, ajuda todas os estudantes a se aproveitarem dos bens atuais da tecnologia!</p>
               </div>
             </div>
@@ -302,13 +273,13 @@
         <div class="section-title" data-aos="fade-up">
           <h2>Matricula</h2>
           <p>Realize a matricula conosco! <br>
-            <span style="color: #7cc576">Por apenas R$ 99,90 por mês</span>, o seu filho(a) estará no melhor instituição inclusiva.</p>
+            <span style="color: #052256">Por apenas R$ 99,90 por mês</span>, o seu filho(a) estará no melhor instituição inclusiva.</p>
         </div>
 
         <div class="row">
 
             <div class="section-title" style="font-size: 24px; font-weight: bold;" data-aos="fade-up">
-                <a href="https://api.whatsapp.com/send?phone=55199999999999&text=Ol%C3%A1%2C%20desejo%20realizar%20uma%20matricula%20no%20CIEIA%20-%20Centro%20Institucional%20escolar%20inclusivo%20de%20Americana." class="btn-buy">CLIQUE AQUI</a>
+                <a href="https://api.whatsapp.com/send?phone=55199999999999&text=Ol%C3%A1%2C%20desejo%20realizar%20uma%20matricula%20no%20CIEIA%20-%20Centro%20Institucional%20escolar%20inclusivo%20de%20Americana." class="btn-buy" style="color: #052256">CLIQUE AQUI</a>
               </div>
             </div>
           </div>
@@ -316,75 +287,6 @@
 
       </div>
     </section><!-- End Pricing Section -->
-
-    <!-- ======= Frequently Asked Questions Section ======= -->
-    <section id="faq" class="faq">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Perguntas frequentes</h2>
-        </div>
-
-        <ul class="faq-list">
-
-          <li data-aos="fade-up">
-            <a data-bs-toggle="collapse" class="collapsed" data-bs-target="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq1" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
-              </p>
-            </div>
-          </li>
-
-          <li data-aos="fade-up" data-aos-delay="100">
-            <a data-bs-toggle="collapse" data-bs-target="#faq2" class="collapsed">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-              </p>
-            </div>
-          </li>
-
-          <li data-aos="fade-up" data-aos-delay="200">
-            <a data-bs-toggle="collapse" data-bs-target="#faq3" class="collapsed">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq3" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
-              </p>
-            </div>
-          </li>
-
-          <li data-aos="fade-up" data-aos-delay="300">
-            <a data-bs-toggle="collapse" data-bs-target="#faq4" class="collapsed">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq4" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-              </p>
-            </div>
-          </li>
-
-          <li data-aos="fade-up" data-aos-delay="400">
-            <a data-bs-toggle="collapse" data-bs-target="#faq5" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-              </p>
-            </div>
-          </li>
-
-          <li data-aos="fade-up" data-aos-delay="500">
-            <a data-bs-toggle="collapse" data-bs-target="#faq6" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-x icon-close"></i></a>
-            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
-              <p>
-                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
-              </p>
-            </div>
-          </li>
-
-        </ul>
-
-      </div>
-    </section><!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
@@ -400,19 +302,20 @@
           <div class="col-lg-4">
             <div class="info d-flex flex-column justify-content-center" data-aos="fade-right">
               <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Rua Vital Brasil, 511,<br>Americana, SP</p>
+                <i class="bi bi-geo-alt" style="color: #052256"></i>
+                <h4>Localização:</h4>
+                <p>Rua Vital Brasil, 349, Jardim Girassol<br>
+                  Americana, SP</p>
               </div>
 
               <div class="email">
-                <i class="bi bi-envelope"></i>
+                <i class="bi bi-envelope" style="color: #052256"></i>
                 <h4>Email:</h4>
                 <p>contato@cieia.com</p>
               </div>
 
               <div class="phone">
-                <i class="bi bi-phone"></i>
+                <i class="bi bi-phone" style="color: #052256"></i>
                 <h4>Telefone:</h4>
                 <p>+55 19 99999-9999</p>
               </div>
@@ -443,7 +346,7 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Sua mensagem foi enviada!</div>
               </div>
-              <div class="text-center"><button type="submit">Enviar mensagem para CIEIA!</button></div>
+              <div class="text-center"><button type="submit" style="background-color: #052256; color: #fff;">Enviar mensagem para CIEIA!</button></div>
             </form>
 
           </div>
